--- a/app/elements/people-block/people-block.html
+++ b/app/elements/people-block/people-block.html
@@ -210,7 +210,7 @@
                 <div id="sideMenu" class="side-menu layout vertical">
                     <paper-card class="filters">
                         <div class="card-content header">
-                            <div class="title-text">Filters</div>
+                            <div class="title-text">Filtros</div>
                         </div>
                         <div class="card-content">
                             <div id="tagFilter" class="selector-group layout horizontal-vertical wrap">
