--- a/app/elements/statistics-block/statistics-block.html
+++ b/app/elements/statistics-block/statistics-block.html
@@ -44,17 +44,17 @@
         },
         attached: function() {
             this.statistics = [{
-                counter: 500,
-                caption: 'Attendees'
+                counter: 250,
+                caption: 'Asistentes'
             }, {
-                counter: 2,
-                caption: 'Days'
+                counter: 1,
+                caption: 'Dia'
             }, {
                 counter: 40,
-                caption: 'Sessions'
+                caption: 'Sesiones'
             }, {
                 counter: 3,
-                caption: 'Parallel tracks'
+                caption: 'Pista Paralelas'
             }];
         }
     });
