--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
     <meta name="keywords" lang="es" content="evento, gdg, devfest, google, programacion, android, polymer, web, desarrollo, grupo, managua, nicaragua"/>
     <meta name="google-site-verification" content="GxUE9cpxaP54b7Ymknz-fxWBiIUrJOqx1PZ5gkRHGeY" />
     <link rel="canonical" href="https://devfest.gdgmanagua.org/">
-    <title>GDG DevFest Managua 2015 &bull; Octubre 01</title>
+    <title>GDG DevFest Managua 2015 &bull; Octubre 17</title>
 
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@GDGLviv">
-    <meta name="twitter:title" content="GDG DevFest Managua 2015 &bull; Octubre 01">
+    <meta name="twitter:title" content="GDG DevFest Managua 2015 &bull; Octubre 17">
     <meta name="twitter:description" content="La mayor conferencia de tecnología Google en Managua cuidadosamente elaborado para usted por la comunidad GDG! Todo sobre Android, Web y Cloud por los expertos mundiales">
     <meta name="twitter:image:src" content="http://devfest.gdg.org.ua/images/seo/seo.jpg">
 
@@ -64,11 +64,11 @@
             <paper-header-panel drawer class="drawer" mode="seamed">
                 <paper-toolbar class="tall">
                     <div class="top">
-                        <img class="logo" src="images/logo-white.svg" alt="GDG DevFest 2015">
+                        <img class="logo" src="images/logo-white.png" alt="GDG DevFest 2015">
                     </div>
                     <div class="bottom">
                         <span class="typo-white">
-                            Octubre 01, 2015
+                            Octubre 17, 2015
                         </span>
                         <span class="block typo-white">
                             Managua, Nicaragua
@@ -91,8 +91,8 @@
                                 <div class="top-section hero">
                                     <div class="layout vertical-horizontal">
                                         <div class="flex center-content-xs">
-                                            <img class="logo" src="images/logo.svg" alt="GDG DevFest 2015">
-                                            <p class="dates bold">Octubre 01, Managua</p>
+                                            <img class="logo" src="images/gdg1.png" alt="GDG DevFest 2015">
+                                            <p class="dates bold">Octubre 17, Managua</p>
                                             <p class="description">La mayor conferencia de tecnología Google en Managua cuidadosamente elaborado para usted por la comunidad GDG! Todo sobre Android, Web y Cloud por los expertos mundiales</p>
                                             <p class="slogan">Let the creation spark ignite!</p>
                                             <div class="links layout horizontal align-pb-block">
@@ -109,7 +109,7 @@
                                             </div>
                                         </div>
                                         <div class="flex relative right-section">
-                                            <iron-image class="fit" src="images/lviv.svg" sizing="contain"></iron-image>
+                                            <iron-image class="fit" src="images/gdg2.png" sizing="contain"></iron-image>
                                         </div>
                                     </div>
                                 </div>
