--- a/app/elements/photo-block/photo-block.html
+++ b/app/elements/photo-block/photo-block.html
@@ -50,20 +50,20 @@
             <div class="flex relative big">
                 <iron-image src="{{photos.big}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
                 <div class="open-photos layout vertical center-center fit pointer" on-tap="openGallery">
-                    <span>Click here to view more photos</span>
+                    <span>Click aqui para ver mas fotos</span>
                 </div>
             </div>
             <div class="flex layout vertical">
                 <div class="flex relative">
                     <iron-image src="{{photos.small.0}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
                     <div class="open-photos layout vertical center-center fit pointer" on-tap="openGallery">
-                        <span>Click here to view more photos</span>
+                        <span>Click aqui para ver mas fotos</span>
                     </div>
                 </div>
                 <div class="flex relative hidden-xs">
                     <iron-image src="{{photos.small.1}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
                     <div class="open-photos layout vertical center-center fit pointer" on-tap="openGallery">
-                        <span>Click here to view more photos</span>
+                        <span>Click aqui para ver mas fotos</span>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
         <paper-dialog id="photosDialog" class="gallery-dialog fit" entry-animation="scale-up-animation" exit-animation="fade-out-animation">
             <paper-toolbar class="navbar-overlay fit">
                 <paper-icon-button icon="icons:arrow-back" on-tap="closeGallery"></paper-icon-button>
-                <div class="title text-left">GDG DevFest Ukraine 2014 - Photos</div>
+                <div class="title text-left">GDG DevFest - Fotos</div>
             </paper-toolbar>
             <div class="gallery-container fit">
                 <photo-gallery user-id="104154992083455126443" album-id="6189295328162771457"></photo-gallery>
