--- a/app/elements/social-feed/social-feed.html
+++ b/app/elements/social-feed/social-feed.html
@@ -21,24 +21,24 @@
         <div class="container relative layout vertical-horizontal">
             <iron-ajax auto url="[[source]]" handle-as="json" on-response="feedLoaded"></iron-ajax>
             <div class="flex-5">
-                <h4 class="heading">What's up <a href="https://www.google.com/#q=%23dfua">#dfua</a></h4>
+                <h4 class="heading">Que pasa <a href="https://www.google.com/#q=%23dfmga">#dfmga</a></h4>
                 <social-post id="post" author="{{author}}" text="{{text}}" when="{{when}}" canonicalUrl="https://twitter.com/" sign="@"></social-post>
             </div>
             <span class="flex"></span>
             <div class="flex-5 second-block">
                 <h4 class="heading">Social</h4>
-                <span class="block">Add to circles, like, follow or connect with us on</span>
+                <span class="block">Agreganos a los circulos, danos like, siguenos o conecta con nosotros en</span>
                 <div class="align-pb-block">
-                    <a href="https://plus.google.com/102444623953913144164" target="_blank">
+                    <a href="https://plus.google.com/113255713593303778606" target="_blank">
                         <paper-icon-button icon="app-icons:glus"></paper-icon-button>
                     </a>
-                    <a href="https://www.facebook.com/GDGLviv" target="_blank">
+                    <a href="https://www.facebook.com/gdgmanagua" target="_blank">
                         <paper-icon-button icon="app-icons:facebook"></paper-icon-button>
                     </a>
-                    <a href="https://twitter.com/gdglviv" target="_blank">
+                    <a href="https://twitter.com/hashtag/gdgmanagua" target="_blank">
                         <paper-icon-button icon="app-icons:twitter"></paper-icon-button>
                     </a>
-                    <a href="https://www.linkedin.com/company/google-developers-group-lviv" target="_blank">
+                    <a href="https://www.linkedin.com/company/google-developers-group-managua" target="_blank">
                         <paper-icon-button icon="app-icons:linkedin"></paper-icon-button>
                     </a>
                 </div>
