Remove references to Ukrania devfest; add more partners

--- a/app/elements/footer-block/footer-block.html
+++ b/app/elements/footer-block/footer-block.html
@@ -122,7 +122,7 @@
         <div class="container footer layout vertical">
             <div class="footer-content layout horizontal justified">
                 <div class="flex gplus">
-                    <g:plusone size="medium" width="200" annotation="inline" href="http://devfest.gdg.org.ua/"></g:plusone>
+                    <g:plusone size="medium" width="200" annotation="inline" href="http://devfest.gdgmanagua.org/"></g:plusone>
                 </div>
                 <paper-button class="footer-backtotop" on-tap="backToTop" noink>
                     Volver al inicio
@@ -143,7 +143,6 @@
                         <span class="link-block-title block">Para Sponsors</span>
                         <ul class="link-block">
                             <li><a href="/assets/GDG_DevFest_Ukraine_2015_Partnership_Proposition.pdf" target="_blank">Sponsor Kit</a></li>
-                            <li><a href="http://bit.ly/dfua-media" target="_blank">Media Kit</a></li>
                         </ul>
                     </div>
                     <div class="flex link-block-wrapper">
