--- a/app/elements/map-block/map-block.html
+++ b/app/elements/map-block/map-block.html
@@ -33,7 +33,7 @@
                 color: inherit;
             }
         </style>
-        <google-map class="fit" zoom="15" latitude="12.114993" longitude="-86.2681136" styles="[[options]]" disable-zoom disable-default-ui>
+        <google-map class="fit" zoom="15" latitude="12.1311094" longitude="-86.2753056" styles="[[options]]" disable-zoom disable-default-ui>
             <google-map-marker latitude="12.1311094" longitude="-86.2753056"></google-map-marker>
         </google-map>
         <div class="container card-container relative layout horizontal center-center">
