--- a/app/index.html
+++ b/app/index.html
@@ -11,18 +11,18 @@
     <meta name="keywords" lang="es" content="evento, gdg, devfest, google, programacion, android, polymer, web, desarrollo, grupo, managua, nicaragua"/>
     <meta name="google-site-verification" content="GxUE9cpxaP54b7Ymknz-fxWBiIUrJOqx1PZ5gkRHGeY" />
     <link rel="canonical" href="https://devfest.gdgmanagua.org/">
-    <title>GDG DevFest Managua 2015 &bull; Octubre 17</title>
+    <title>GDG DevFest Managua 2015 &bull; Octubre 24</title>
 
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@GDGLviv">
-    <meta name="twitter:title" content="GDG DevFest Managua 2015 &bull; Octubre 17">
+    <meta name="twitter:title" content="GDG DevFest Managua 2015 &bull; Octubre 24">
     <meta name="twitter:description" content="La mayor conferencia de tecnología Google en Managua cuidadosamente elaborado para usted por la comunidad GDG! Todo sobre Android, Web y Cloud por los expertos mundiales">
     <meta name="twitter:image:src" content="http://devfest.gdg.org.ua/images/seo/seo.jpg">
 
     <!-- Social: Facebook / Open Graph -->
-    <meta property="og:title" content="GDG DevFest Managua 2015 &bull; Octubre 01" />
-    <meta property="og:site_name" content="GDG DevFest Managua 2015 &bull; Octubre 01" />
+    <meta property="og:title" content="GDG DevFest Managua 2015 &bull; Octubre 24" />
+    <meta property="og:site_name" content="GDG DevFest Managua 2015 &bull; Octubre 24" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://devfest.gdgmanagua.org/" />
     <meta property="og:image" content="https://devfest.gdgmanagua.org/images/seo/seo.jpg" />
@@ -68,7 +68,7 @@
                     </div>
                     <div class="bottom">
                         <span class="typo-white">
-                            Octubre 17, 2015
+                            Octubre 24, 2015
                         </span>
                         <span class="block typo-white">
                             Managua, Nicaragua
@@ -92,11 +92,11 @@
                                     <div class="layout vertical-horizontal">
                                         <div class="flex center-content-xs">
                                             <img class="logo" src="images/gdg1.png" alt="GDG DevFest 2015">
-                                            <p class="dates bold">Octubre 17, Managua</p>
+                                            <p class="dates bold">Octubre 24, Managua</p>
                                             <p class="description">La mayor conferencia de tecnología Google en Managua cuidadosamente elaborado para usted por la comunidad GDG! Todo sobre Android, Web y Cloud por los expertos mundiales</p>
                                             <p class="slogan">Let the creation spark ignite!</p>
                                             <div class="links layout horizontal align-pb-block">
-                                                <a href="http://goo.gl/forms/kymZwijWFy" target="_blank">
+                                                <a href="https://goo.gl/9WiVuD" target="_blank">
                                                     <paper-button noink>
                                                         Se un conferencista
                                                     </paper-button>
@@ -113,7 +113,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Ukraine%202015&dates=20151023T090000/20151024T180000&details=The%20biggest%20Google%20related%20event%20in%20Ukraine%20carefully%20crafted%20for%20you%20by%20GDG%20community!%20Awesome%20speakers%20and%20lot's%20of%20fun!%20Details%20at%20http://devfest.gdg.org.ua&location=Shchyretska%20St%2036,%20L'viv,%20Львівська%20область,%20Ukraine&pli=1&uid=&sf=true&output=xml#eventpage_6"
+                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Nicaragua%202015&dates=20151024T130000/20151024T180000&details=El%20Evento%20mas%20grande%20sobre%20Google%20en%20Nicaragua!&location=Centro%20Cultural%20Nicaragüense%20Norteamericano%20CCNN,%20Managua,%20Nicaragua&pli=1&uid=&sf=true&output=xml#eventpage_6"
                                 target="_blank" onclick="ga('send', 'add-event-to-calendar', 'button', 'click');">
                                     <paper-fab class="section-fab-right" icon="icons:event"></paper-fab>
                                 </a>
